# monadic-quicksort-verification

./: .gitignore  CHANGELOG.md  ChangeLog.md  README.md  monadic-quicksort-verification.cabal  package.yaml  stack.yaml
Old/Sort/: ArrayOld.hs  ArrayProto.hs  List.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.1/: monadic-quicksort-verification-0.1.0.0-inplace.conf  package.cache
eqpropchain-edsl/: main.aux  main.tex
notes/: divide_and_conquer.hs  iqsort_spec_lemma1.hs  iqsort_spec_lemma2.hs  liquidhaskell-feedback.md  meeting 2021-01-27.md  meeting 2021-02-10.md  meeting 2021-03-10.md  meeting 2021-03-17.md  meeting 2021-03-23.md  meeting 2021-03-24.md  permute_kleisli_slowsort.md  permute_preserves_length.hs
old/: ArrayProto.hs  ArrayTodo.hs  ListProto.hs  ListTodo.hs
propositional-equality/: LICENSE  propositional-equality.cabal  stack.yaml
propositional-equality/src/: Function.hs
propositional-equality/src/Relation/Equality/: Prop.hs  PropBlind.hs
propositional-equality/src/Relation/Equality/Prop/: EDSL.hs  Reasoning.hs
propositional-equality/test/: Endofunctors.hs  Folds.hs  Inconsistency.hs  Map.hs  Readers.hs  RefinedDomains.hs  Reverse.hs  RunTimeCheck.hs  Test.hs  Unsoundness.hs
ref/supplementaryPLDI21/: README.md  propositional-equality.cabal  stack.yaml
ref/supplementaryPLDI21/code/: Endofunctors.hs  PEqProperties.hs  PropositionalEquality.hs  RefinedDomains.hs
ref/supplementaryPLDI21/code/.liquid/: Endofunctors.hs.cst.html  Endofunctors.hs.evals.smt2  Endofunctors.hs.html  Endofunctors.hs.json  Endofunctors.hs.smt2  Endofunctors.hs.vim.annot  Folds.hs.1.evals.smt2  Folds.hs.1.smt2  Folds.hs.2.evals.smt2  Folds.hs.2.smt2  Folds.hs.3.evals.smt2  Folds.hs.3.smt2  Folds.hs.cst.html  Folds.hs.html  Folds.hs.json  Folds.hs.vim.annot  Map.hs.cst.html  Map.hs.evals.smt2  Map.hs.html  Map.hs.json  Map.hs.smt2  Map.hs.vim.annot  PEqProperties.hs.cst.html  PEqProperties.hs.html  PEqProperties.hs.json  PEqProperties.hs.smt2  PEqProperties.hs.vim.annot  PropositionalEquality.hs.cst.html  PropositionalEquality.hs.evals.smt2  PropositionalEquality.hs.html  PropositionalEquality.hs.json  PropositionalEquality.hs.smt2  PropositionalEquality.hs.vim.annot  Readers.hs.cst.html  Readers.hs.evals.smt2  Readers.hs.html  Readers.hs.json  Readers.hs.smt2  Readers.hs.vim.annot  RefinedDomains.hs.cst.html  (+22 more)
ref/supplementaryPLDI21/code/Language/Haskell/Liquid/: ProofCombinators.hs
src/: Equality.hs  Function.hs  IsEq.hs  IsMonad.hs  IsMonadArray.hs  IsMonadPlus.hs  IsMonoid.hs  Makefile  PartitionArray.hs  QuickSort.hs  QuickSortArray.hs  QuickSortArray_old.hs  QuickSortList.hs  Relation.hs  SlowSort.hs  SlowSortList.hs  VFunctor.hs  VGroup.hs  VIdentity.hs  VList.hs  VMonad.hs  VMonadArray.hs  VMonadPlus.hs  VMonoid.hs  VNat.hs  VOrdered.hs  VPartitioned.hs  VSemigroup.hs  VTuple.hs  VUnit.hs
src-old/: EqualityMonadic.hs  Function.hs  SlowSortList.hs  Test.hs  VBool.hs  VFunctor.hs  VIdentity.hs  VList.hs  VMonad.hs  VMonadPlus.hs
src-old/.liquid/: Equality.hs.cst.html  Equality.hs.evals.smt2  Equality.hs.html  Equality.hs.json  Equality.hs.smt2  Equality.hs.vim.annot  EqualityMonadic.hs.cst.html  EqualityMonadic.hs.evals.smt2  EqualityMonadic.hs.html  EqualityMonadic.hs.json  EqualityMonadic.hs.smt2  EqualityMonadic.hs.vim.annot  Equivalence.hs.cst.html  Equivalence.hs.evals.smt2  Equivalence.hs.html  Equivalence.hs.json  Equivalence.hs.smt2  Equivalence.hs.vim.annot  Function.hs.cst.html  Function.hs.evals.smt2  Function.hs.html  Function.hs.json  Function.hs.smt2  Function.hs.vim.annot  PartitionArray.hs.cst.html  PartitionArray.hs.evals.smt2  PartitionArray.hs.html  PartitionArray.hs.smt2  ProofCombinators.hs.cst.html  ProofCombinators.hs.evals.smt2  ProofCombinators.hs.html  ProofCombinators.hs.json  ProofCombinators.hs.smt2  ProofCombinators.hs.vim.annot  QuickSortArray.hs.cst.html  QuickSortArray.hs.evals.smt2  QuickSortArray.hs.html  QuickSortArray.hs.smt2  QuickSortList.hs.cst.html  QuickSortList.hs.evals.smt2  (+104 more)
src-tmp/: Makefile  QuickSortArray.hs  hie.yaml  scratch.hs
src/.liquid/: Extensionality.hs.bak  Extensionality.hs.bspec  Extensionality.hs.cst.html  Extensionality.hs.err  Extensionality.hs.evals.smt2  Extensionality.hs.html  Extensionality.hs.json  Extensionality.hs.smt2  Extensionality.hs.vim.annot  Function.hs.bspec  Function.hs.cst.html  Function.hs.err  Function.hs.evals.smt2  Function.hs.html  Function.hs.json  Function.hs.smt2  Function.hs.vim.annot  IsEq.hs.bspec  IsEq.hs.cst.html  IsEq.hs.err  IsEq.hs.evals.smt2  IsEq.hs.html  IsEq.hs.smt2  IsFunctor.hs.bak  IsFunctor.hs.bspec  IsFunctor.hs.cst.html  IsFunctor.hs.err  IsFunctor.hs.evals.smt2  IsFunctor.hs.html  IsFunctor.hs.json  IsFunctor.hs.smt2  IsFunctor.hs.vim.annot  IsMonad.hs.bspec  IsMonad.hs.cst.html  IsMonad.hs.err  IsMonad.hs.evals.smt2  IsMonad.hs.html  IsMonad.hs.json  IsMonad.hs.smt2  IsMonad.hs.vim.annot  (+253 more)
src/Category/: Monad.hs
src/Category/Monad/: Array.hs  Plus.hs
src/Control/Monad/: Refined.hs
src/Control/Refined/: Functor.hs  Monad.hs  SlowsortList.hs  Sort.hs  SortProto.hs
src/Data/: Natural.hs  Unit.hs
src/Data/Refined/: Bool.hs  Constant.hs  List.hs  Nat.hs  Natural.hs  Tuple.hs  Unit.hs
src/Liquid/: ProofCombinators.hs
src/Placeholder/: M.hs
src/Relation/Equality/: Prop.hs  PropBlind.hs  (+1 more)
src/Sort/: Array.hs  ArrayProto.hs  ArrayProtoNew.hs  ArrayProtoProto.hs  IPartl.hs  IPartlTodo.hs  IPartlWork.hs  IQSort.hs  List.hs  ListDone.hs  ListProto.hs  ListProtoOld.hs  ListTodo.hs  ListWork.hs
test/: Reader.hs  Spec.hs
(+13 files in other folders)
