cabal-version:       >=1.10

name:                monadic-quicksort-verification
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license-file:        LICENSE
author:              Henry Blanchette
maintainer:          henry@monkeyface.com
copyright:           2020 Henry Blanchette, University of Maryland, College Park.
category:            Language, Verification
build-type:          Simple
extra-source-files:  CHANGELOG.md


library
  hs-source-dirs: src
  exposed-modules:
    Equality,
    Function,
    -- PartitionArray,
    -- QuickSortArray,
    -- QuickSortList,
    Relation,
    -- SlowSortList,
    -- Test
    VBool,
    VFunctor,
    VGroup,
    VIdentity,
    VList,
    VMonad,
    VMonadArray,
    VMonadPlus,
    VMonoid,
    VNat,
    VOrdered,
    VPartitioned,
    VSemigroup,
    VTuple,
    VUnit
  build-depends:
    liquidhaskell == 0.8.10.2,
    liquid-base,
    liquid-prelude
  ghc-options: -Wall -Wno-name-shadowing -Wno-unused-imports -Wno-unused-matches -Wno-unused-local-binds -fplugin=LiquidHaskell -fplugin-opt=LiquidHaskell:--reflection -fplugin-opt=LiquidHaskell:--ple-local -fplugin-opt=LiquidHaskell:--diff -fplugin-opt=LiquidHaskell:--short-names -fplugin-opt=LiquidHaskell:--prune-unsorted
  default-extensions:
    RankNTypes,
    ScopedTypeVariables,
    GADTs,
    KindSignatures,
    ExplicitForAll
  default-language: Haskell2010
