cabal-version: 1.12
name:           propositional-equality
version:        0.1.0.0
license:        MIT
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git

library
  exposed-modules:
      Relation.Equality.Prop
      Relation.Equality.Prop.EDSL
      Relation.Equality.Prop.Reasoning
  hs-source-dirs:
      code
  ghc-options: -Wall -fplugin=LiquidHaskell
  build-depends:
      liquid-base
    , liquidhaskell
  default-language: Haskell2010
